--- a/public/sass/all.scss
+++ b/public/sass/all.scss
@@ -1,3 +1,4 @@
-@import "helpers/mixin";
-@import "base/reset";
-@import "base/general";
+@import 'helpers/mixin';
+@import 'helpers/variables';
+@import 'base/reset';
+@import 'base/general';
