--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,15 +1,28 @@
+@charset "UTF-8";
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
 ul {
   margin: 0;
 }
 
+@font-face {
+  font-family: "Noto Sans TC";
+  src: url("/assets/font/Noto Sans TC.woff2") format("woff2");
+}
 * {
   box-sizing: border-box;
-  font-family: "Noto Sans TC";
+  font-family: "Noto Sans TC", sans-serif;
 }
 
 body {
   font-weight: 400;
   line-height: 140%;
+  background-color: #E2D9D3;
 }
 
 h1,
@@ -92,6 +105,36 @@ input {
 
 .btn-lg {
   font-size: 16px;
+}
+
+.header-container {
+  background-image: url("/assets/images/底色.png");
+  background-color: #204379;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 60px 24px 8px;
+  width: 100%;
+  height: 793px;
+}
+
+.slogan-container h2 {
+  color: #FFFFFF;
+  letter-spacing: 0.2em;
+}
+.slogan-container h2:nth-child(2) {
+  font-size: 28px;
+  text-align: center;
+  margin-top: 4px;
+}
+
+.whiteWave {
+  background-image: url("/assets/images/白色海浪.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-color: #204379;
+  width: 100%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=all.css.map */
