--- a/public/sass/base/_general.scss
+++ b/public/sass/base/_general.scss
@@ -1,11 +1,19 @@
+@use '../helpers/variables';
+
+@font-face {
+  font-family: 'Noto Sans TC';
+  src: url('/assets/font/Noto Sans TC.woff2') format('woff2');
+}
+
 * {
   box-sizing: border-box;
-  font-family: 'Noto Sans TC';
+  font-family: 'Noto Sans TC', sans-serif;
 }
 
 body {
   @include fw-400;
   @include lineHeight-140;
+  background-color: $primaryColor4;
 }
 
 h1,
