--- a/public/css/all.css
+++ b/public/css/all.css
@@ -23,6 +23,7 @@ body {
   font-weight: 400;
   line-height: 140%;
   background-color: #E2D9D3;
+  min-width: 414px;
 }
 
 h1,
@@ -108,7 +109,10 @@ input {
 }
 
 .header-container {
-  background-image: url("/assets/images/底色.png");
+  background-image: url("/assets/images/白色海浪.png"), url("/assets/images/底色.png");
+  background-position: center;
+  background-size: 350% 85%;
+  background-repeat: no-repeat, no-repeat;
   background-color: #204379;
   display: flex;
   flex-direction: column;
@@ -118,23 +122,14 @@ input {
   height: 793px;
 }
 
-.slogan-container h2 {
+.slogan-container > h2 {
   color: #FFFFFF;
   letter-spacing: 0.2em;
 }
-.slogan-container h2:nth-child(2) {
+.slogan-container > h2:nth-child(2) {
   font-size: 28px;
   text-align: center;
   margin-top: 4px;
-}
-
-.whiteWave {
-  background-image: url("/assets/images/白色海浪.png");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-color: #204379;
-  width: 100%;
-  height: 100%;
 }
 
 /*# sourceMappingURL=all.css.map */
