--- a/public/sass/components/_top.scss
+++ b/public/sass/components/_top.scss
@@ -1,43 +1,29 @@
 @use '../helpers/variables';
 
 .header-container {
-  background-image: url('/assets/images/底色.png');
+  background-image: url('/assets/images/白色海浪.png'),
+    url('/assets/images/底色.png');
+  background-position: center;
+  background-size: 350% 85%;
+  background-repeat: no-repeat, no-repeat;
   background-color: $primaryColor1;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 60px 24px 8px;
-  // gap: 32px;
-  // position: relative;
-  // top: 0;
-  // left: 0;
   width: 100%;
+  
+  // 暫定height
   height: 793px;
 }
 
-.slogan-container {
-  // z-index: 10;
-  h2 {
-    color: $white;
-    letter-spacing: 0.2em;
+.slogan-container > h2 {
+  color: $white;
+  letter-spacing: 0.2em;
 
-    &:nth-child(2) {
-      font-size: 28px;
-      text-align: center;
-      margin-top: 4px;
-    }
+  &:nth-child(2) {
+    font-size: 28px;
+    text-align: center;
+    margin-top: 4px;
   }
-}
-
-.whiteWave {
-  background-image: url('/assets/images/白色海浪.png');
-  // background-position: center;
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  background-color: $primaryColor1;
-  // position: absolute;
-  // top: 0;
-  // left: 0;
-  width: 100%;
-  height: 100%;
 }
