1. 新增了Paragraph組件與其scss樣式 2. Header組件中，新增了段落的文章內容

--- a/public/sass/all.scss
+++ b/public/sass/all.scss
@@ -2,4 +2,5 @@
 @import 'helpers/variables';
 @import 'base/reset';
 @import 'base/general';
-@import 'components/top';
+@import 'components/header';
+@import 'components/paragraph';
