--- a/public/css/all.css
+++ b/public/css/all.css
@@ -132,4 +132,36 @@ input {
   margin-top: 4px;
 }
 
+.btn-goToForm {
+  margin: 10px 0;
+}
+
+.paragraphs-container {
+  background-color: #DAE4F1;
+  border: 2px solid #B57556;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 24px 16px;
+}
+
+.paragraph, .title {
+  display: flex;
+  align-items: center;
+}
+
+.paragraph {
+  flex-direction: column;
+}
+.paragraph .title {
+  flex-direction: row;
+}
+.paragraph h5, .paragraph li {
+  color: #204379;
+}
+.paragraph ol {
+  padding-left: 16px;
+}
+
 /*# sourceMappingURL=all.css.map */
