--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -12,9 +12,7 @@
   align-items: center;
   padding: 60px 24px 8px;
   width: 100%;
-  
-  // 暫定height
-  height: 793px;
+  height: 793px; // 暫定height
 }
 
 .slogan-container > h2 {
@@ -26,4 +24,18 @@
     text-align: center;
     margin-top: 4px;
   }
+}
+
+.btn-goToForm {
+  margin: 10px 0;
+}
+
+.paragraphs-container {
+  background-color: $primaryColor3;
+  border: 2px solid $primaryColor2;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 24px 16px;
 }
