--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -28,6 +28,11 @@
 
 .btn-goToForm {
   margin: 10px 0;
+  height: 100px;
+}
+
+.btn-goToForm:hover {
+  cursor: pointer;
 }
 
 .paragraphs-container {
@@ -38,4 +43,7 @@
   flex-direction: column;
   align-items: center;
   padding: 24px 16px;
+  position: relative;
+  width: 100%;
+  max-width: 808px;
 }
