--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -1,8 +1,8 @@
 @use '../helpers/variables';
 
 .header-container {
-  background-image: url('/assets/images/白色海浪.png'),
-    url('/assets/images/底色.png');
+  background-image: url('/assets/images/白色海浪.svg'),
+    url('/assets/images/底色.svg');
   background-position: center;
   background-size: 350% 85%;
   background-repeat: no-repeat, no-repeat;
@@ -46,4 +46,32 @@
   position: relative;
   width: 100%;
   max-width: 808px;
+}
+
+.supBubble-container,
+.sup,
+.oar,
+.bubble-sm,
+.bubble {
+  position: absolute;
+}
+
+.supBubble-container {
+  top: -28px;
+  right: 70px;
+
+  .oar {
+    top: 10px;
+    left: 20px;
+  }
+
+  .bubble-sm {
+    top: -50px;
+    right: -60px;
+  }
+
+  .bubble {
+    top: -30px;
+    right: -50px;
+  }
 }
