--- a/public/css/all.css
+++ b/public/css/all.css
@@ -111,7 +111,7 @@ input {
 .header-container {
   background-image: url("/assets/images/白色海浪.svg"), url("/assets/images/底色.svg");
   background-position: center;
-  background-size: 350% 85%;
+  background-size: 350% 80%;
   background-repeat: no-repeat, no-repeat;
   background-color: #204379;
   display: flex;
@@ -119,7 +119,7 @@ input {
   align-items: center;
   padding: 60px 24px 8px;
   width: 100%;
-  height: 793px;
+  min-height: 584px;
 }
 
 .slogan-container > h2 {
@@ -158,7 +158,10 @@ input {
 .sup,
 .oar,
 .bubble-sm,
-.bubble {
+.bubble,
+.supFirework-container,
+.supFirework,
+.firework {
   position: absolute;
 }
 
@@ -179,6 +182,25 @@ input {
   right: -50px;
 }
 
+.supFirework-container {
+  bottom: 31px;
+  left: 8px;
+}
+.supFirework-container .firework {
+  top: 20px;
+  left: -28px;
+}
+
+.wave {
+  height: 110px;
+  background-image: url("/assets/images/海浪.svg"), linear-gradient(to bottom, #204379 50%, #E2D9D3 50%);
+  background-repeat: repeat-x;
+  background-position-y: bottom;
+  overflow: hidden;
+  box-sizing: unset;
+  padding-top: 40px;
+}
+
 .paragraph, .title {
   display: flex;
   justify-content: center;
@@ -191,6 +213,7 @@ input {
 .paragraph .title {
   align-items: center;
   flex-direction: row;
+  min-height: 40px;
 }
 .paragraph h5, .paragraph li {
   color: #204379;
