--- a/public/css/all.css
+++ b/public/css/all.css
@@ -10,6 +10,11 @@ ul {
   margin: 0;
 }
 
+button {
+  border: 0;
+  padding: 0;
+}
+
 @font-face {
   font-family: "Noto Sans TC";
   src: url("/assets/font/Noto Sans TC.woff2") format("woff2");
@@ -223,6 +228,66 @@ input {
 }
 .paragraph ol {
   padding-left: 16px;
+}
+
+.formComponent-container,
+form,
+input {
+  display: flex;
+  flex-direction: column;
+}
+
+.formComponent-container {
+  background-color: #E2D9D3;
+  padding: 67.46px 24px 0 24px;
+}
+
+form {
+  border: 2px solid #B57556;
+  border-radius: 16px;
+  box-shadow: 0px 1px 20px rgba(73, 72, 72, 0.25);
+  background: #FFFFFF;
+  padding: 40px 20px;
+  margin-bottom: 30px;
+  gap: 20px;
+}
+form label {
+  position: relative;
+}
+form label:first-child > input, form label:nth-child(6) > input {
+  background-image: url("/assets/images/drop down.svg");
+  background-repeat: no-repeat;
+  background-position: 97% 49%;
+}
+form label div {
+  color: #204379;
+}
+form label div span {
+  color: #B57556;
+}
+form label input {
+  width: 100%;
+  height: 57px;
+  margin: 4px 0 auto 0;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 8px 16px;
+  gap: 10px;
+  border: 1px solid #204379;
+  border-radius: 20px;
+}
+form label input::placeholder {
+  color: #bdbdbd;
+}
+form label input::-webkit-calendar-picker-indicator {
+  display: none !important;
+}
+
+button {
+  width: fit-content;
+  background-color: inherit;
+  margin: 0 auto;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=all.css.map */
