--- a/public/css/all.css
+++ b/public/css/all.css
@@ -230,6 +230,18 @@ input {
   padding-left: 16px;
 }
 
+form label input {
+  width: 100%;
+  height: 57px;
+  margin: 4px 0 auto 0;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 8px 16px;
+  gap: 10px;
+  border: 1px solid #204379;
+  border-radius: 20px;
+}
+
 .formComponent-container,
 form,
 input {
@@ -292,7 +304,14 @@ form label {
 form label:nth-child(2) > input, form label:nth-child(7) > input {
   background-image: url("/assets/images/drop down.svg");
   background-repeat: no-repeat;
-  background-position: 97% 49%;
+  background-position: calc(100% - 18px) 48%;
+  cursor: pointer;
+}
+form label:nth-child(2) > input:focus {
+  background-position: calc(100% - 16px) 47.5%;
+}
+form label:nth-child(7) > input:focus {
+  background-position: calc(100% - 16px) 47.8%;
 }
 form label div {
   color: #204379;
@@ -300,16 +319,10 @@ form label div {
 form label div span {
   color: #B57556;
 }
-form label input {
-  width: 100%;
-  height: 57px;
-  margin: 4px 0 auto 0;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 8px 16px;
-  gap: 10px;
-  border: 1px solid #204379;
-  border-radius: 20px;
+form label input:focus {
+  outline: 0;
+  border: 3px solid #93BBF9;
+  padding: 8px 14px;
 }
 form label input::placeholder {
   color: #bdbdbd;
