--- a/public/sass/all.scss
+++ b/public/sass/all.scss
@@ -2,6 +2,9 @@
 @import 'helpers/variables';
 @import 'base/reset';
 @import 'base/general';
+@import 'layout/grid';
 @import 'components/header';
 @import 'components/paragraph';
 @import 'components/form';
+@import 'components/prize';
+@import 'components/card';
