新增以及完成Market組件

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -113,6 +113,13 @@ input {
   font-size: 16px;
 }
 
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
 .container {
   width: 100%;
 }
@@ -439,15 +446,14 @@ button {
   height: 81px;
 }
 
-.lighthouse-section-wrapper,
+.lighthouse-wrapper,
 .lighthouse-words {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.lighthouse-section-wrapper {
-  width: 100%;
+.lighthouse-wrapper {
   padding: 40px 24px;
 }
 
@@ -470,6 +476,21 @@ button {
 }
 .lighthouse-words h4:first-child {
   color: #B57556;
+}
+
+.market-wrapper {
+  background-color: #204379;
+  padding: 40px 19px;
+  border-radius: 50px 50px 0px 0px;
+}
+
+.market-words {
+  font-weight: 700;
+  font-size: 20px;
+  color: #FFFFFF;
+  line-height: 200%;
+  letter-spacing: 0.2em;
+  margin-bottom: 24px;
 }
 
 /*# sourceMappingURL=all.css.map */
