將表單輸入框改成用遍歷的方式展示，並稍微改變scss內容，以及添加輸入框錯誤提示的樣式

--- a/public/sass/components/_form.scss
+++ b/public/sass/components/_form.scss
@@ -76,7 +76,7 @@ form {
     position: relative;
 
     &:nth-child(2) > input,
-    &:nth-child(7) > input {
+    &:nth-child(6) > input {
       background-image: url('/assets/images/drop down.svg');
       background-repeat: no-repeat;
       background-position: calc(100% - 18px) 48%;
@@ -113,6 +113,12 @@ form {
       &::-webkit-calendar-picker-indicator {
         display: none !important;
       }
+    }
+
+    .errMsg {
+      color: $alertColor;
+      position: absolute;
+      top: 85px;
     }
   }
 }
