--- a/public/css/all.css
+++ b/public/css/all.css
@@ -313,7 +313,7 @@ form .formTitle-container img {
 form label {
   position: relative;
 }
-form label:nth-child(2) > input, form label:nth-child(7) > input {
+form label:nth-child(2) > input, form label:nth-child(6) > input {
   background-image: url("/assets/images/drop down.svg");
   background-repeat: no-repeat;
   background-position: calc(100% - 18px) 48%;
@@ -341,6 +341,11 @@ form label input::placeholder {
 }
 form label input::-webkit-calendar-picker-indicator {
   display: none !important;
+}
+form label .errMsg {
+  color: #E06D6D;
+  position: absolute;
+  top: 85px;
 }
 
 button {
