--- a/public/sass/components/_form.scss
+++ b/public/sass/components/_form.scss
@@ -103,7 +103,7 @@ form {
 
       &:focus {
         outline: 0;
-        border: 3px solid #93BBF9;
+        border: 3px solid #93bbf9;
         padding: 8px 14px;
       }
 
@@ -121,6 +121,12 @@ form {
       top: 85px;
     }
   }
+}
+
+.error {
+  outline: 0;
+  border: 3px solid $alertColor;
+  padding: 8px 14px;
 }
 
 button {
