--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -116,10 +116,10 @@ form {
     }
 
     @media only screen and (max-width: 600px) {
-      input[name="phone"],
+      input[inputMode="none"],
       input[type="text"] {
-        type: "number";
-        inputmode: 'numeric';
+        // type: "number";
+        inputMode: 'numeric';
       }
     }
 
