--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -77,7 +77,7 @@ form {
 
     &:nth-child(2) > input,
     &:nth-child(6) > input {
-      background-image: url('/assets/images/drop down.svg');
+      background-image: url('../../assets/images/drop_down.svg');
       background-repeat: no-repeat;
       background-position: calc(100% - 18px) 48%;
       cursor: pointer;
@@ -112,14 +112,6 @@ form {
       }
       &::-webkit-calendar-picker-indicator {
         display: none !important;
-      }
-    }
-
-    @media only screen and (max-width: 600px) {
-      input[inputMode="none"],
-      input[type="text"] {
-        // type: "number";
-        inputMode: 'numeric';
       }
     }
 
