--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -77,7 +77,7 @@ form {
 
     &:nth-child(2) > input,
     &:nth-child(6) > input {
-      background-image: url('../../assets/images/drop_down.svg');
+      background-image: url('/assets/images/drop_down.svg');
       background-repeat: no-repeat;
       background-position: calc(100% - 18px) 48%;
       cursor: pointer;
