--- a/css/all.css
+++ b/css/all.css
@@ -314,7 +314,7 @@ form label {
   position: relative;
 }
 form label:nth-child(2) > input, form label:nth-child(6) > input {
-  background-image: url("/assets/images/drop_down.svg");
+  background-image: url("../assets/images/drop_down.svg");
   background-repeat: no-repeat;
   background-position: calc(100% - 18px) 48%;
   cursor: pointer;
