--- a/sass/components/_prize.scss
+++ b/sass/components/_prize.scss
@@ -6,7 +6,7 @@
 }
 
 .prize-wrapper {
-  background-image: url('/assets/images/沙子.svg');
+  background-image: url('../assets/images/沙子.svg');
   padding: 60px 0 45px 0;
   margin-top: 30px;
   display: flex;
