--- a/css/all.css
+++ b/css/all.css
@@ -17,7 +17,7 @@ button {
 
 @font-face {
   font-family: "Noto Sans TC";
-  src: url("/assets/font/Noto Sans TC.woff2") format("woff2");
+  src: url("../assets/font/Noto Sans TC.woff2") format("woff2");
 }
 * {
   box-sizing: border-box;
