--- a/public/sass/base/_general.scss
+++ b/public/sass/base/_general.scss
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Noto Sans TC';
-  src: url('/assets/font/Noto Sans TC.woff2') format('woff2');
+  src: url('../assets/font/Noto Sans TC.woff2') format('woff2');
 }
 
 * {
