--- a/css/all.css
+++ b/css/all.css
@@ -296,7 +296,7 @@ form .formTitle-container div {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 123px;
+  width: 128px;
   height: 43px;
   padding: 10px 15px;
   box-shadow: 0px 1px 10px rgba(73, 72, 72, 0.25);
@@ -308,7 +308,7 @@ form .formTitle-container div h5 {
 }
 form .formTitle-container img {
   top: -10px;
-  left: 100px;
+  left: 103.5px;
 }
 form label {
   position: relative;
@@ -341,6 +341,8 @@ form label input::placeholder {
 }
 form label input::-webkit-calendar-picker-indicator {
   display: none !important;
+  opacity: 0;
+  -webkit-appearance: none;
 }
 form label .errMsg {
   color: #E06D6D;
