--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -54,7 +54,7 @@ form {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 123px;
+      width: 128px;
       height: 43px;
       padding: 10px 15px;
       box-shadow: 0px 1px 10px rgba(73, 72, 72, 0.25);
@@ -68,7 +68,7 @@ form {
 
     img {
       top: -10px;
-      left: 100px;
+      left: 103.5px;
     }
   }
 
@@ -112,6 +112,8 @@ form {
       }
       &::-webkit-calendar-picker-indicator {
         display: none !important;
+        opacity: 0;
+        -webkit-appearance: none;
       }
     }
 
