--- a/public/sass/components/_form.scss
+++ b/public/sass/components/_form.scss
@@ -54,7 +54,7 @@ form {
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 123px;
+      width: 126px;
       height: 43px;
       padding: 10px 15px;
       box-shadow: 0px 1px 10px rgba(73, 72, 72, 0.25);
@@ -68,7 +68,7 @@ form {
 
     img {
       top: -10px;
-      left: 100px;
+      left: 103.5px;
     }
   }
 
@@ -83,10 +83,13 @@ form {
       cursor: pointer;
     }
 
+
+    &:nth-child(2) > input.error,
     &:nth-child(2) > input:focus {
       background-position: calc(100% - 16px) calc(47.5%);
     }
-    &:nth-child(7) > input:focus {
+    &:nth-child(6) > input.error,
+    &:nth-child(6) > input:focus {
       background-position: calc(100% - 16px) calc(47.8%);
     }
 
@@ -111,8 +114,9 @@ form {
         color: #bdbdbd;
       }
       &::-webkit-calendar-picker-indicator {
-        // display: none !important;
-        opacity:0;
+        display: none !important;
+        opacity: 0 !important;
+        -webkit-appearance: none !important;
       }
     }
 
