--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -79,15 +79,20 @@ form {
     &:nth-child(6) > input {
       background-image: url('../assets/images/drop_down.svg');
       background-repeat: no-repeat;
-      background-position: calc(100% - 18px) 48%;
+      // background-position: calc(100% - 18px) 48%;
+      background-position: calc(100% - 15px) 48%;
       cursor: pointer;
     }
 
+    &:nth-child(2) > input.error,
     &:nth-child(2) > input:focus {
-      background-position: calc(100% - 16px) calc(47.5%);
+      // background-position: calc(100% - 16px) calc(47.5%);
+      background-position: calc(100% - 13px) calc(47.5%);
     }
-    &:nth-child(7) > input:focus {
-      background-position: calc(100% - 16px) calc(47.8%);
+    &:nth-child(6) > input.error,
+    &:nth-child(6) > input:focus {
+      // background-position: calc(100% - 16px) calc(47.8%);
+      background-position: calc(100% - 13px) calc(47.8%);
     }
 
     div {
