--- a/public/sass/components/_form.scss
+++ b/public/sass/components/_form.scss
@@ -79,18 +79,17 @@ form {
     &:nth-child(6) > input {
       background-image: url('../assets/images/drop_down.svg');
       background-repeat: no-repeat;
-      background-position: calc(100% - 18px) 48%;
+      background-position: calc(100% - 9px) 48%;
       cursor: pointer;
     }
 
-
     &:nth-child(2) > input.error,
     &:nth-child(2) > input:focus {
-      background-position: calc(100% - 16px) calc(47.5%);
+      background-position: calc(100% - 7px) calc(47.5%);
     }
     &:nth-child(6) > input.error,
     &:nth-child(6) > input:focus {
-      background-position: calc(100% - 16px) calc(47.8%);
+      background-position: calc(100% - 7px) calc(47.8%);
     }
 
     div {
@@ -115,7 +114,7 @@ form {
       }
       &::-webkit-calendar-picker-indicator {
         display: none !important;
-        opacity: 0 !important;
+        opacity: transparent !important;
         -webkit-appearance: none !important;
       }
     }
