--- a/public/css/all.css
+++ b/public/css/all.css
@@ -256,6 +256,17 @@ form label input {
   border-radius: 20px;
 }
 
+button.failure, button.success, button {
+  width: 200px;
+  height: 57px;
+  background-color: #B57556;
+  box-shadow: 0px 4px 10px rgba(40, 35, 35, 0.35), 0px -4px 10px rgba(255, 255, 255, 0.9);
+  border-radius: 50px;
+  padding: 16px 20px;
+  margin: 14px auto 18px auto;
+  letter-spacing: 0.4em;
+}
+
 .formComponent-container,
 form,
 input {
@@ -317,7 +328,6 @@ form label:nth-child(2) > input, form label:nth-child(6) > input {
   background-image: url("../assets/images/drop_down.svg");
   background-repeat: no-repeat;
   background-position: calc(100% - 9px) 48%;
-  cursor: pointer;
 }
 form label:nth-child(2) > input.error, form label:nth-child(2) > input:focus {
   background-position: calc(100% - 7px) 47.5%;
@@ -357,10 +367,35 @@ form label .errMsg {
 }
 
 button {
-  width: fit-content;
-  background-color: inherit;
-  margin: 0 auto;
+  color: #FFFFFF;
   cursor: pointer;
+}
+button:disabled {
+  cursor: not-allowed;
+}
+button.success, button.failure {
+  position: relative;
+}
+button.success img,
+button.success h5, button.failure img,
+button.failure h5 {
+  position: absolute;
+  top: 17.5px;
+}
+button.success img, button.failure img {
+  left: 35px;
+}
+button.success h5, button.failure h5 {
+  right: 35px;
+}
+button.success {
+  color: #e6ffb1;
+}
+button.failure {
+  color: #ffe3e3;
+}
+button.pressed {
+  opacity: 0.6;
 }
 
 .prize-wrapper,
