--- a/public/css/all.css
+++ b/public/css/all.css
@@ -263,8 +263,14 @@ button.failure, button.success, button {
   box-shadow: 0px 4px 10px rgba(40, 35, 35, 0.35), 0px -4px 10px rgba(255, 255, 255, 0.9);
   border-radius: 50px;
   padding: 16px 20px;
-  margin: 14px auto 18px auto;
+  margin: 14px auto 7px auto;
   letter-spacing: 0.4em;
+}
+
+.submitBtnSection, form .formTitle-container div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .formComponent-container,
@@ -304,9 +310,6 @@ form .formTitle-container {
   left: calc(50% - 66.6666666667px);
 }
 form .formTitle-container div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 126px;
   height: 43px;
   padding: 10px 15px;
@@ -366,6 +369,10 @@ form label .errMsg {
   padding: 8px 14px;
 }
 
+.submitBtnSection {
+  flex-direction: column;
+}
+
 button {
   color: #FFFFFF;
   cursor: pointer;
@@ -402,6 +409,17 @@ button.failure h5 {
 }
 button.pressed {
   opacity: 0.6;
+}
+
+.failureMsg-container {
+  height: 21px;
+}
+
+.failureMsg {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #E06D6D;
 }
 
 .prize-wrapper,
