--- a/public/sass/components/_form.scss
+++ b/public/sass/components/_form.scss
@@ -21,8 +21,14 @@
     0px -4px 10px rgba(255, 255, 255, 0.9);
   border-radius: 50px;
   padding: 16px 20px;
-  margin: 14px auto 18px auto;
+  margin: 14px auto 7px auto;
   letter-spacing: 0.4em;
+}
+
+%flexCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .formComponent-container,
@@ -63,9 +69,7 @@ form {
     left: calc(50% - (100px * 2 / 3));
 
     div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      @extend %flexCenter;
       width: 126px;
       height: 43px;
       padding: 10px 15px;
@@ -144,6 +148,11 @@ form {
   padding: 8px 14px;
 }
 
+.submitBtnSection {
+  @extend %flexCenter;
+  flex-direction: column;
+}
+
 button {
   @extend %button-basic;
   color: $white;
@@ -167,7 +176,7 @@ button {
   &.success {
     @extend %button-basic;
     color: #e6ffb1;
-    
+
     img {
       left: 32px;
     }
@@ -194,3 +203,13 @@ button {
     opacity: 0.6;
   }
 }
+
+.failureMsg-container {
+  height: 21px;
+}
+
+.failureMsg {
+  @include input14R;
+  color: $alertColor;
+}
+
