--- a/public/sass/components/_form.scss
+++ b/public/sass/components/_form.scss
@@ -153,6 +153,16 @@ form {
   flex-direction: column;
 }
 
+.mt29mb49 {
+  margin: 29px 0 49px 0;
+}
+
+@keyframes respiration {
+  0% {width: 200px; height: 57px}
+  50% {width: 210px; height: 67px}
+  100% {width: 200px; height: 57px}
+}
+
 button {
   @extend %button-basic;
   color: $white;
@@ -160,6 +170,12 @@ button {
 
   &:disabled {
     cursor: not-allowed;
+  }
+
+  &.origin {
+    animation: respiration 3s linear infinite;
+
+    position: absolute;
   }
 
   &.success,
