--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -57,6 +57,12 @@
   position: absolute;
 }
 
+@keyframes shaking {
+  0% {top: 10px; left: 20px; rotate: 0deg;}
+  50% {top: 10px; left: 15px; rotate: 20deg;}
+  100% {top: 10px; left: 20px; rotate: 0deg;}
+}
+
 .supBubble-container {
   top: -28px;
   right: 70px;
@@ -64,6 +70,7 @@
   .oar {
     top: 10px;
     left: 20px;
+    animation: shaking 3s linear infinite;
   }
 
   .bubble-sm {
