--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -63,6 +63,18 @@
   100% {top: 10px; left: 20px; rotate: 0deg;}
 }
 
+@keyframes bubble-sm {
+  0% {top: -30px; right: -60px; opacity: 0.2;}
+  50% {top: -40px; right: -65px; opacity: 1;}
+  100% {top: -50px; right: -60px; opacity: 0.4;}
+}
+
+@keyframes bubble {
+  0% {top: -10px; right: -50px; opacity: 0.2;}
+  50% {top: -20px; right: -45px; opacity: 1;}
+  100% {top: -30px; right: -50px; opacity: 0.4;}
+}
+
 .supBubble-container {
   top: -28px;
   right: 70px;
@@ -76,11 +88,13 @@
   .bubble-sm {
     top: -50px;
     right: -60px;
+    animation: bubble-sm 2.5s linear infinite;
   }
 
   .bubble {
     top: -30px;
     right: -50px;
+    animation: bubble 2.5s linear infinite;
   }
 }
 
