--- a/public/sass/components/_header.scss
+++ b/public/sass/components/_header.scss
@@ -98,6 +98,12 @@
   }
 }
 
+@keyframes firework {
+  0% {transform: scale(1, 1); opacity: 1;}
+  50% {transform: scale(1.5, 1.5); opacity: 0.7;}
+  100% {transform: scale(1.5, 1.5); opacity: 0.1;}
+}
+
 .supFirework-container {
   bottom: 31px;
   left: 8px;
@@ -105,6 +111,7 @@
   .firework {
     top: 20px;
     left: -28px;
+    animation: firework 2s linear infinite;
   }
 }
 
