--- a/css/all.css
+++ b/css/all.css
@@ -129,6 +129,10 @@ input {
     width: 808px;
   }
 }
+.app {
+  overflow: hidden;
+}
+
 .header-container {
   background-image: url("../assets/images/白色海浪.svg"), url("../assets/images/底色.svg");
   background-position: center;
@@ -153,9 +157,45 @@ input {
   margin-top: 4px;
 }
 
+@keyframes rainbow {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
 .btn-goToForm {
-  margin: 10px 0;
+  margin: 14px 0;
   height: 100px;
+  position: relative;
+}
+.btn-goToForm::before {
+  content: "";
+  background: url("../assets/images/form.svg");
+  position: absolute;
+  left: -120px;
+  width: 240px;
+  height: 100px;
+  z-index: 1;
+}
+.btn-goToForm:after {
+  display: inline-block;
+  content: "";
+  background: linear-gradient(124deg, #efdbc8, #e9c87f, #b2e1ea, #90cae5, #f5caf4, #dfc9f9);
+  background-size: 400%;
+  width: 210px;
+  height: 68px;
+  border-radius: 30px;
+  filter: blur(5px);
+  position: absolute;
+  left: -105px;
+  top: 14px;
+  transition: all 0.3s ease-in-out;
+  animation: rainbow 20s linear infinite;
 }
 
 .btn-goToForm:hover {
@@ -184,6 +224,57 @@ input {
   position: absolute;
 }
 
+@keyframes shaking {
+  0% {
+    top: 10px;
+    left: 20px;
+    rotate: 0deg;
+  }
+  50% {
+    top: 10px;
+    left: 15px;
+    rotate: 20deg;
+  }
+  100% {
+    top: 10px;
+    left: 20px;
+    rotate: 0deg;
+  }
+}
+@keyframes bubble-sm {
+  0% {
+    top: -30px;
+    right: -60px;
+    opacity: 0.2;
+  }
+  50% {
+    top: -40px;
+    right: -65px;
+    opacity: 1;
+  }
+  100% {
+    top: -50px;
+    right: -60px;
+    opacity: 0.4;
+  }
+}
+@keyframes bubble {
+  0% {
+    top: -10px;
+    right: -50px;
+    opacity: 0.2;
+  }
+  50% {
+    top: -20px;
+    right: -45px;
+    opacity: 1;
+  }
+  100% {
+    top: -30px;
+    right: -50px;
+    opacity: 0.4;
+  }
+}
 .supBubble-container {
   top: -28px;
   right: 70px;
@@ -191,25 +282,55 @@ input {
 .supBubble-container .oar {
   top: 10px;
   left: 20px;
+  animation: shaking 3s linear infinite;
 }
 .supBubble-container .bubble-sm {
   top: -50px;
   right: -60px;
+  animation: bubble-sm 2.5s linear infinite;
 }
 .supBubble-container .bubble {
   top: -30px;
   right: -50px;
+  animation: bubble 2.5s linear infinite;
 }
 
+@keyframes firework {
+  0% {
+    transform: scale(1, 1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.5, 1.5);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(1.5, 1.5);
+    opacity: 0.1;
+  }
+}
 .supFirework-container {
   bottom: 31px;
   left: 8px;
+  z-index: 1;
 }
 .supFirework-container .firework {
   top: 20px;
   left: -28px;
+  animation: firework 2s linear infinite;
 }
 
+@keyframes wave {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(-25%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
 .wave {
   height: 110px;
   background-image: url("../assets/images/海浪.svg"), linear-gradient(to bottom, #204379 50%, #E2D9D3 50%);
@@ -218,6 +339,9 @@ input {
   overflow: hidden;
   box-sizing: unset;
   padding-top: 40px;
+  animation: wave 5s linear infinite;
+  width: 200%;
+  transform-origin: left bottom;
 }
 
 .paragraph, .title {
@@ -254,6 +378,23 @@ form label input {
   gap: 10px;
   border: 1px solid #204379;
   border-radius: 20px;
+}
+
+button.failure, button.success, button {
+  width: 200px;
+  height: 57px;
+  background-color: #B57556;
+  box-shadow: 0px 4px 10px rgba(40, 35, 35, 0.35), 0px -4px 10px rgba(255, 255, 255, 0.9);
+  border-radius: 50px;
+  padding: 16px 20px;
+  margin: 14px auto 7px auto;
+  letter-spacing: 0.4em;
+}
+
+.submitBtnSection, form .formTitle-container div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .formComponent-container,
@@ -293,9 +434,6 @@ form .formTitle-container {
   left: calc(50% - 66.6666666667px);
 }
 form .formTitle-container div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 126px;
   height: 43px;
   padding: 10px 15px;
@@ -306,9 +444,61 @@ form .formTitle-container div {
 form .formTitle-container div h5 {
   letter-spacing: 0.2em;
 }
+@keyframes swimming {
+  0% {
+    top: 50px;
+    left: 303.5px;
+  }
+  15% {
+    top: -10px;
+    left: 153.5px;
+    rotate: 20deg;
+  }
+  20% {
+    top: -60px;
+    left: 123.5px;
+    rotate: 40deg;
+  }
+  30% {
+    top: -160px;
+    left: 143.5px;
+    rotate: 92deg;
+  }
+  40% {
+    top: -200px;
+    left: 233.5px;
+    rotate: 130deg;
+  }
+  50% {
+    top: -170px;
+    left: 403.5px;
+    rotate: 210deg;
+  }
+  60% {
+    top: -30px;
+    left: 373.5px;
+    rotate: 320deg;
+  }
+  75% {
+    top: 10px;
+    left: 253.5px;
+    rotate: 340deg;
+  }
+  90% {
+    top: -10px;
+    left: 103.5px;
+    rotate: 360deg;
+  }
+  100% {
+    top: -10px;
+    left: 103.5px;
+    rotate: 360deg;
+  }
+}
 form .formTitle-container img {
   top: -10px;
   left: 103.5px;
+  animation: swimming 8s linear infinite backwards 1s;
 }
 form label {
   position: relative;
@@ -317,7 +507,6 @@ form label:nth-child(2) > input, form label:nth-child(6) > input {
   background-image: url("../assets/images/drop_down.svg");
   background-repeat: no-repeat;
   background-position: calc(100% - 9px) 48%;
-  cursor: pointer;
 }
 form label:nth-child(2) > input.error, form label:nth-child(2) > input:focus {
   background-position: calc(100% - 7px) 47.5%;
@@ -356,11 +545,79 @@ form label .errMsg {
   padding: 8px 14px;
 }
 
+.submitBtnSection {
+  flex-direction: column;
+}
+
+.mt29mb49 {
+  margin: 29px 0 49px 0;
+}
+
+@keyframes respiration {
+  0% {
+    width: 200px;
+    height: 57px;
+  }
+  50% {
+    width: 210px;
+    height: 67px;
+  }
+  100% {
+    width: 200px;
+    height: 57px;
+  }
+}
 button {
-  width: fit-content;
-  background-color: inherit;
-  margin: 0 auto;
+  color: #FFFFFF;
   cursor: pointer;
+}
+button:disabled {
+  cursor: not-allowed;
+}
+button.origin {
+  animation: respiration 3s linear infinite;
+  position: absolute;
+}
+button.success, button.failure {
+  position: relative;
+}
+button.success img,
+button.success h5, button.failure img,
+button.failure h5 {
+  position: absolute;
+  top: 17.5px;
+}
+button.success {
+  color: #e6ffb1;
+}
+button.success img {
+  left: 32px;
+}
+button.success h5 {
+  right: 30px;
+}
+button.failure {
+  color: #ffe3e3;
+}
+button.failure img {
+  left: 35px;
+}
+button.failure h5 {
+  right: 35px;
+}
+button.pressed {
+  opacity: 0.6;
+}
+
+.failureMsg-container {
+  height: 21px;
+}
+
+.failureMsg {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 150%;
+  color: #E06D6D;
 }
 
 .prize-wrapper,
