--- a/sass/all.scss
+++ b/sass/all.scss
@@ -3,6 +3,7 @@
 @import 'base/reset';
 @import 'base/general';
 @import 'layout/grid';
+@import 'components/app';
 @import 'components/header';
 @import 'components/paragraph';
 @import 'components/form';
