--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -13,6 +13,24 @@
   border-radius: 20px;
 }
 
+%button-basic {
+  width: 200px;
+  height: 57px;
+  background-color: $primaryColor2;
+  box-shadow: 0px 4px 10px rgba(40, 35, 35, 0.35),
+    0px -4px 10px rgba(255, 255, 255, 0.9);
+  border-radius: 50px;
+  padding: 16px 20px;
+  margin: 14px auto 7px auto;
+  letter-spacing: 0.4em;
+}
+
+%flexCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .formComponent-container,
 form,
 input {
@@ -51,9 +69,7 @@ form {
     left: calc(50% - (100px * 2 / 3));
 
     div {
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      @extend %flexCenter;
       width: 126px;
       height: 43px;
       padding: 10px 15px;
@@ -66,9 +82,23 @@ form {
       }
     }
 
+    @keyframes swimming {
+      0% {top: 50px; left: 303.5px;}
+      15% {top: -10px; left: 153.5px; rotate: 20deg;}
+      20% {top: -60px; left: 123.5px; rotate: 40deg;}
+      30% {top: -160px; left: 143.5px; rotate: 92deg;}
+      40% {top: -200px; left: 233.5px; rotate: 130deg;}
+      50% {top: -170px; left: 403.5px;  rotate: 210deg;}
+      60% {top: -30px; left: 373.5px; rotate: 320deg;}
+      75% {top: 10px; left: 253.5px; rotate: 340deg;}
+      90% {top: -10px; left: 103.5px; rotate: 360deg;}
+      100% {top: -10px; left: 103.5px; rotate: 360deg;}
+    }
+
     img {
       top: -10px;
       left: 103.5px;
+      animation: swimming 8s linear infinite backwards 1s;
     }
   }
 
@@ -79,19 +109,15 @@ form {
     &:nth-child(6) > input {
       background-image: url('../assets/images/drop_down.svg');
       background-repeat: no-repeat;
-      // background-position: calc(100% - 18px) 48%;
       background-position: calc(100% - 9px) 48%;
-      cursor: pointer;
     }
 
     &:nth-child(2) > input.error,
     &:nth-child(2) > input:focus {
-      // background-position: calc(100% - 16px) calc(47.5%);
       background-position: calc(100% - 7px) calc(47.5%);
     }
     &:nth-child(6) > input.error,
     &:nth-child(6) > input:focus {
-      // background-position: calc(100% - 16px) calc(47.8%);
       background-position: calc(100% - 7px) calc(47.8%);
     }
 
@@ -136,9 +162,83 @@ form {
   padding: 8px 14px;
 }
 
-button {
-  width: fit-content;
-  background-color: inherit;
-  margin: 0 auto;
-  cursor: pointer;
+.submitBtnSection {
+  @extend %flexCenter;
+  flex-direction: column;
 }
+
+.mt29mb49 {
+  margin: 29px 0 49px 0;
+}
+
+@keyframes respiration {
+  0% {width: 200px; height: 57px}
+  50% {width: 210px; height: 67px}
+  100% {width: 200px; height: 57px}
+}
+
+button {
+  @extend %button-basic;
+  color: $white;
+  cursor: pointer;
+
+  &:disabled {
+    cursor: not-allowed;
+  }
+
+  &.origin {
+    animation: respiration 3s linear infinite;
+    position: absolute;
+  }
+
+  &.success,
+  &.failure {
+    position: relative;
+
+    img,
+    h5 {
+      position: absolute;
+      top: 17.5px;
+    }
+  }
+
+  &.success {
+    @extend %button-basic;
+    color: #e6ffb1;
+
+    img {
+      left: 32px;
+    }
+
+    h5 {
+      right: 30px;
+    }
+  }
+
+  &.failure {
+    @extend %button-basic;
+    color: #ffe3e3;
+
+    img {
+      left: 35px;
+    }
+
+    h5 {
+      right: 35px;
+    }
+  }
+
+  &.pressed {
+    opacity: 0.6;
+  }
+}
+
+.failureMsg-container {
+  height: 21px;
+}
+
+.failureMsg {
+  @include input14R;
+  color: $alertColor;
+}
+
